[package]
name = "pahkat_client"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "dylib", "rlib"]

[[bin]]
name = "pahkat-prefix"
path = "src/bin/pahkat-prefix.rs"
required-features = ["binaries", "prefix"]

[[bin]]
name = "pahkat-mac"
path = "src/bin/pahkat-mac.rs"
required-features = ["binaries", "macos"]

[[bin]]
name = "pahkat-win"
path = "src/bin/pahkat-win.rs"
required-features = ["binaries", "windows"]

[dependencies]
pahkat-types = { git = "https://github.com/divvun/pahkat", branch = "develop" }
reqwest = "0.9.18"
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0.94"
semver = "0.9.0"
url = "1.7.2"
url_serde = "0.2.0"
libc = "0.2.59"
rust-crypto = "0.2.36"
lazy_static = "1.3.0"
sentry = "0.15.5"
maplit = "1.0"
dirs = "2.0.2"
directories = "2.0.2"
chrono = "0.4.7"
hashbrown = { version = "0.5.0", features = ["serde"] }
is_executable = "0.1.2"
snafu = "0.4.3"
tempfile = "3.1.0"
itertools = "0.8.0"
log = "0.4.8"

# Prefix feature
xz2 = { version = "0.1.6", optional = true }
rusqlite = { version = "0.19.0", features = ["bundled"], optional = true }
tar = { version = "0.4.26", optional = true }
r2d2 = { version = "0.8.5", optional = true }
r2d2_sqlite = { version = "0.11.0", optional = true }

# Binaries feature
clap = { version = "2.33.0", optional = true }
termcolor = { version = "1.0.5", optional = true }
indicatif = { version = "0.11.0", optional = true }
better-panic = { git = "https://github.com/mitsuhiko/better-panic", optional = true }

# FFI specific
# cursed = { path = "../cursed", optional = true }
env_logger = { version = "0.6.2", optional = true }

# MacOS-specific
[target.'cfg(target_os="macos")'.dependencies]
plist = { version = "0.4.2" }

# Windows-specific
[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["shellapi"] }
winreg = { git = "https://github.com/bbqsrc/winreg-rs", branch = "master" }

[features]
ffi = ["env_logger"]
prefix = ["tar", "xz2", "rusqlite", "r2d2_sqlite", "r2d2"]
binaries = ["clap", "termcolor", "indicatif", "better-panic"]
windows = []