[package]
name = "pahkat_client"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "dylib", "rlib"]

[[bin]]
name = "pahkat-prefix"
path = "src/bin/pahkat-prefix.rs"
required-features = ["binaries", "prefix"]

[[bin]]
name = "pahkat-mac"
path = "src/bin/pahkat-mac.rs"
required-features = ["binaries", "macos"]

[[bin]]
name = "pahkat-win"
path = "src/bin/pahkat-win.rs"
required-features = ["binaries", "windows"]

[dependencies]
pahkat-types = { git = "https://github.com/divvun/pahkat", branch = "develop" }
reqwest = "0.9.22"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
semver = "0.9.0"
url = { version = "2.1.0", features = ["serde"] }
libc = "0.2.65"
lazy_static = "1.4.0"
sentry = "0.17.0"
maplit = "1.0"
dirs = "2.0.2"
directories = "2.0.2"
chrono = "0.4.9"
hashbrown = { version = "0.6.1", features = ["serde"] }
is_executable = "0.1.2"
snafu = "0.5.0"
tempfile = "3.1.0"
itertools = "0.8.0"
log = "0.4.8"
sha2 = "0.8"

# Prefix feature
xz2 = { version = "0.1.6", optional = true }
rusqlite = { version = "0.20.0", features = ["bundled"], optional = true }
tar = { version = "0.4.26", optional = true }
r2d2 = { version = "0.8.5", optional = true }
r2d2_sqlite = { version = "0.12.0", optional = true }

# Binaries feature
clap = { version = "2.33.0", optional = true }
termcolor = { version = "1.0.5", optional = true }
indicatif = { version = "0.12.0", optional = true }
better-panic = { git = "https://github.com/mitsuhiko/better-panic", optional = true }

# FFI specific
# cursed = { path = "../cursed", optional = true }
env_logger = { version = "0.7.1", optional = true }
cthulhu = { path = "../cthulhu/cthulhu", optional = true }
cursed = { path = "../cthulhu/cursed", optional = true }

# MacOS-specific
[target.'cfg(target_os="macos")'.dependencies]
plist = { version = "0.5.1" }

# Windows-specific
[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["shellapi"] }
winreg = { git = "https://github.com/bbqsrc/winreg-rs", branch = "master" }

[features]
ffi = ["env_logger", "cthulhu", "cursed"]
prefix = ["tar", "xz2", "rusqlite", "r2d2_sqlite", "r2d2"]
binaries = ["clap", "termcolor", "indicatif", "better-panic"]
windows = []
macos = []
