[workspace]
members = [
    "pahkat-types",
    # "pahkat-common",
    "pahkat-rpc",
    "pahkat-client-core",
    "pahkat-repomgr",
    "pahkat-cli",
]

exclude = [
    "pahkat-uploader",
]

[patch.crates-io]
windows-accesstoken = { git = "https://github.com/Eijebong/windows-accesstoken", branch = "fix-64-bits-builds" }
