[package]
name = "pahkat-cli"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "GPL-3.0"
edition = "2018"

[[bin]]
name = "pahkat"
path = "src/main.rs"

[dependencies]
pahkat_client = { path = "../pahkat-client-core", default-features = false }
structopt = { version = "0.3.13", features = ["color"] }
directories = "2.0.2"
anyhow = "1.0.28"
indicatif = "0.14.0"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds", "sync", "blocking", "signal"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[features]
default = []
windows = ["pahkat_client/windows"]
prefix = ["pahkat_client/prefix"]
macos = ["pahkat_client/macos"]
