[package]
name = "pahkat-cli"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "GPL-3.0"
edition = "2018"

[[bin]]
name = "pahkat-cli"
path = "src/main.rs"

[dependencies]
pahkat-client = { path = "../pahkat-client-core", default-features = false }
structopt = { version = "0.3.26", features = ["color"] }
directories = "4.0.1"
anyhow = "1.0.65"
indicatif = "0.14.0"
env_logger = "0.9.1"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "fs", "macros", "sync", "signal"] }
futures = { version = "0.3.24", default-features = false, features = ["alloc"] }
pahkat-types = { path = "../pahkat-types" }
thiserror = "1.0.37"

[features]
default = []
windows = ["pahkat-client/windows"]
prefix = ["pahkat-client/prefix"]
macos = ["pahkat-client/macos"]
