[package]
name = "pahkat-client"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Prefix feature
xz2 = { version = "0.1.6", optional = true }
rusqlite = { version = "0.23.1", features = ["bundled"], optional = true }
tar = { version = "0.4.29", optional = true }
r2d2 = { version = "0.8.9", optional = true }
r2d2_sqlite = { version = "0.16.0", optional = true }

# FFI specific
env_logger = { version = "0.7.1", optional = true }
cthulhu = { git = "https://github.com/cthulhu-rs/cthulhu", branch = "feature/bytes-plus-len", optional = true }
cursed = { git = "https://github.com/cthulhu-rs/cthulhu", branch = "feature/bytes-plus-len", optional = true }

# The rest
pahkat-types = { path = "../pahkat-types" }
butte = { git = "https://github.com/butte-rs/butte" }
butte-build = { git = "https://github.com/butte-rs/butte" }

reqwest = { version = "0.10.7", features = ["rustls-tls", "blocking", "gzip"], default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
semver = "0.10.0"
url = { version = "2.1.1", features = ["serde"] }
libc = "0.2.74"
lazy_static = "1.4.0"
maplit = "1.0"
chrono = "0.4.15"
hashbrown = { version = "0.9.0", features = ["serde"] }
is_executable = "0.1.2"
tempfile = "3.1.0"
itertools = "0.9.0"
log = "0.4.11"
sha2 = "0.9.1"
tokio = { version = "0.2.22", default-features = false, features = ["tcp", "time"] }
once_cell = "1.4.1"
toml = "0.5.6"
thiserror = "1.0.20"
indexmap = { version = "1.6.0", features = ["serde-1"] }
async-trait = "0.1.37"
futures = "0.3.5"
async-stream = "0.3.0"
stream-cancel = "0.6.1"
anyhow = "1.0.32"
workqueue = "0.1.1"
crossbeam-queue = "0.2.3"
whoami = "0.9.0"
pathos = "0.2.0-pre.7"
iref = "1.2.0"

    # MacOS-specific
    [target.'cfg(target_os="macos")'.dependencies]
    plist = { version = "1.0.0" }

    # Windows-specific
    [target.'cfg(target_os="windows")'.dependencies]
    winapi = { version = "0.3", features = ["shellapi"] }
    registry = { git = "https://github.com/bbqsrc/registry-rs" }

    # Android-specific
    [target.'cfg(target_os="android")'.dependencies]
    backtrace = "0.3.50"
    ctor = "0.1.15"
    android_log = { git = "https://github.com/bbqsrc/android_log-rs" }

[build-dependencies]
anyhow = "1.0.32"
butte-build = { git = "https://github.com/butte-rs/butte" }

[features]
ffi = ["env_logger", "cthulhu", "cursed"]
prefix = ["tar", "xz2", "rusqlite", "r2d2_sqlite", "r2d2"]
windows = []
macos = []
