[package]
name = "pahkat-client"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Prefix feature
xz2 = { version = "0.1.7", optional = true }
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }
tar = { version = "0.4.38", optional = true }
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = { version = "0.21.0", optional = true }

# FFI specific
env_logger = { version = "0.9.1", optional = true }
cffi = { version = "0.1.7", optional = true, features = ["url"] }

# The rest
pahkat-types = { path = "../pahkat-types" }
fbs = "0.6.0"
fbs-build = "0.1.0"

reqwest = { version = "0.11.12", features = ["rustls-tls", "blocking", "gzip"], default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
semver = "1.0.14"
url = { version = "2.3.1", features = ["serde"] }
libc = "0.2.135"
chrono = "0.4.22"
hashbrown = { version = "0.12.3", features = ["serde"] }
is_executable = "1.0.1"
log = "0.4.17"
sha2 = "0.10.6"
tokio = { version = "1.21.2", default-features = false, features = ["net", "rt", "time", "sync"] }
once_cell = "1.15.0"
toml = "0.5.9"
thiserror = "1.0.37"
indexmap = { version = "1.9.1", features = ["std", "serde-1"] }
futures = "0.3.24"
async-stream = "0.3.3"
stream-cancel = "0.8.1"
anyhow = "1.0.65"
crossbeam-queue = "0.2.3"
whoami = "1.2.3"
pathos = "0.3.0"
iref = "1.4"

# MacOS-specific
[target.'cfg(target_os="macos")'.dependencies]
plist = "1.3.1"

# Windows-specific
[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi"] }
registry = "1.2.2"

# Android-specific
[target.'cfg(target_os="android")'.dependencies]
backtrace = "0.3.66"
android_log = { git = "https://github.com/bbqsrc/android_log-rs" }

[build-dependencies]
anyhow = "1.0.65"
fbs-build = "0.1.0"

[features]
ffi = ["env_logger", "cffi"]
prefix = ["tar", "xz2", "rusqlite", "r2d2_sqlite", "r2d2"]
windows = []
macos = []
