[package]
name = "pahkat-common"
version = "0.6.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
pahkat-types = { path = "../pahkat-types" }
serde = "1.0.91"
serde_json = "1.0.39"
diesel = { version = "1.4.2", features = ["sqlite", "chrono", "r2d2"] }
pathdiff = { version = "0.1" }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
chrono = "0.4.6"
failure = "0.1.5"
r2d2 = "0.8.5"
directories = "2.0.0"
