[package]
name = "pahkat-repomgr"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
pahkat-types = { path = "../pahkat-types", features = ["structopt"] }
tokio = { version = "1.6", features = ["net"] }
dialoguer = { version = "0.6.2", optional = true }
url = "2.1.1"
serde = "1.0.115"
anyhow = "1.0.32"
structopt = { version = "0.3.16", optional = true }
typed-builder = "0.7.0"
thiserror = "1.0.20"
toml = "0.5.6"
log = "0.4.11"
fbs = "0.6"
fbs-build = "0.1"
env_logger = "0.7.1"

[build-dependencies]
anyhow = "1.0.32"
fbs-build = "0.1"

[features]
default = ["cli"]
cli = ["dialoguer", "structopt"]
