[package]
name = "pahkat-repomgr"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
pahkat-types = { path = "../pahkat-types", features = ["structopt"] }
tokio = { version = "1.21.2", features = ["net"] }
dialoguer = { version = "0.10.2", optional = true }
url = "2.3.1"
serde = "1.0.145"
anyhow = "1.0.65"
structopt = { version = "0.3.26", optional = true }
typed-builder = "0.10.0"
thiserror = "1.0.37"
toml = "0.5.9"
log = "0.4.17"
fbs = "0.6.0"
fbs-build = "0.1.0"
env_logger = "0.9.1"

[build-dependencies]
anyhow = "1.0.65"
fbs-build = "0.1.0"

[features]
default = ["cli"]
cli = ["dialoguer", "structopt"]
