[package]
name = "pahkat-rpc"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
pahkat-client = { path = "../pahkat-client-core" }
tonic = "0.7.1"
pin-project = "1.0"
hyper = "0.14"
prost = "0.10"
tokio = { version = "1.6", features = ["rt-multi-thread", "time", "fs", "macros", "sync", "signal"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3.0"
tower = "0.4.12"
log = "0.4.11"
env_logger = "0.7.1"
cffi = { version = "0.1.7", features = ["url"] }
anyhow = "1.0.32"
stream-cancel = "0.8.0"
once_cell = "1.4.0"
fern = "0.6.0"
structopt = "0.3.15"
serde_json = "1.0.57"
serde = "1.0.114"
url = "2.1.1"
chrono = "0.4.13"
thiserror = "1.0.20"
pathos = "0.3.0-pre.6"
task-collection = { version = "0.0.4", features = ["tokio"] }
winapi = { version = "0.3", features = ["winnt"]}
tokio-stream = { version = "0.1.8", features = ["net", "sync"] }

[target.'cfg(target_os="macos")'.dependencies]
raunch = { version = "1.0.0", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
windows-service = "0.4"
windows-accesstoken = "0.1"
eventlog = "0.1.0"
tokio-named-pipe = { git = "https://github.com/bbqsrc/tokio-named-pipe" }

[build-dependencies]
tonic-build = "0.7"

[features]
default = ["windows"]
# default = ["server"]
# server = []
# client = []
windows = ["pahkat-client/windows"]
prefix = ["pahkat-client/prefix"]
macos = ["pahkat-client/macos"]
launchd = ["macos", "raunch"]
