[package]
name = "pahkat-rpc"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "winsvc"
required-features = ["windows"]

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
pahkat-client = { path = "../pahkat-client-core" }
tonic = "0.8.2"
pin-project = "1.0.12"
hyper = "0.14.20"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "fs", "macros", "sync", "signal"] }
futures = { version = "0.3.24", default-features = false, features = ["alloc"] }
async-stream = "0.3.3"
tower = "0.4.13"
log = "0.4.17"
env_logger = "0.9.1"
cffi = { version = "0.1.7", features = ["url"] }
anyhow = "1.0.65"
stream-cancel = "0.8.1"
once_cell = "1.15.0"
fern = "0.6.1"
structopt = "0.3.26"
serde_json = "1.0.86"
serde = "1.0.145"
url = "2.3.1"
chrono = "0.4.22"
thiserror = "1.0.37"
pathos = "0.3.0"
task-collection = { version = "0.0.4", features = ["tokio"] }
winapi = { version = "0.3.9", features = ["winnt"] }
tokio-stream = { version = "0.1.11", features = ["net", "sync"] }
axum = { version = "0.5.16", features = ["http2", "headers"] }

[target.'cfg(target_os="macos")'.dependencies]
raunch = { version = "1.0.0", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
windows-service = "0.5.0"
windows-accesstoken = "0.1.0"
eventlog = "0.1.1"
tokio-named-pipe = { git = "https://github.com/bbqsrc/tokio-named-pipe" }

[build-dependencies]
tonic-build = "0.8.2"

[features]
windows = ["pahkat-client/windows"]
prefix = ["pahkat-client/prefix"]
macos = ["pahkat-client/macos"]
launchd = ["macos", "raunch"]
