[package]
name = "pahkat-server"
version = "0.6.0"
authors = [
    "projektir <oprojektir@gmail.com>",
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Rostislav Raykov <rostislav@technocreatives.com>",
    "Eike Siewertsen <eike@allv.is>",
]
edition = "2018"
description = "Páhkat server implementation"

[dependencies]
pahkat-types = { path = "../pahkat-types" }
pahkat-common = { path = "../pahkat-common" }
clap = { version = "2.33.0" }
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.88"
actix-web = "1.0.0-beta.5"
actix = "0.8.2"
actix-multipart = "=0.1.2"
actix-form-data = "=0.4.0"
glob = "0.3.0"
log = "0.4.6"
env_logger = "0.6.1"
chrono = "0.4.6"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
failure = "0.1.5"
futures = "0.1.28"
mime = "=0.3.13"
toml = "=0.5.0"
directories = "=2.0.1"
diesel_migrations = "1.4.0"
diesel = "1.4.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
