[package]
name = "pahkat-server"
version = "0.6.0"
authors = [
    "projektir <oprojektir@gmail.com>",
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Rostislav Raykov <rostislav@technocreatives.com>",
    "Eike Siewertsen <eike@allv.is>",
]
edition = "2018"
description = "Páhkat server implementation"

[dependencies]
pahkat-types = { path = "../pahkat-types" }
pahkat-common = { path = "../pahkat-common" }
clap = "2.33.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
actix-web = "1.0.9"
actix = "0.8.3"
actix-multipart = "0.1.4"
actix-form-data = "0.4.0"
glob = "0.3.0"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.9"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
failure = "0.1.6"
futures = "^0.1"
mime = "0.3.14"
toml = "0.5.5"
directories = "2.0.2"
diesel_migrations = "1.4.0"
diesel = "1.4.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
