[package]
name = "pahkat-server"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "net", "time"] }
warp = "0.2"
serde = { version = "1.0.110", features = ["derive"] }
thiserror = "1.0.19"
pahkat-types = { path = "../pahkat-types" }
toml = "0.5.6"
pahkat-repomgr = { path = "../pahkat-repomgr" }
structopt = "0.3.14"
anyhow = "1.0.31"
env_logger = "0.7.1"
log = "0.4.8"
