[package]
name = "pahkat-types"
version = "1.0.0-alpha.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
url = { version = "2.1.1", features = ["serde"] }
indexmap = { version = "1.5.1", features = ["serde-1"] }
semver = { version = "0.10.0", features = ["serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
thiserror = "1.0.20"
typed-builder = "0.9.0"
structopt = { version = "0.3.16", optional = true }
poem-openapi = { path = "../../../bbqsrc/poem/poem-openapi", features = ["url"], optional = true } # { version = "1", optional = true }
fbs = "0.6"
fbs-build = "0.1"

[build-dependencies]
fbs-build = "0.1"

[dev-dependencies]
serde_json = "*"
toml = "*"
