[package]
name = "pahkat-types"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
url = { version = "2.1.1", features = ["serde"] }
semver = { version = "0.10.0", features = ["serde"] }
thiserror = "1.0.20"
typed-builder = "0.9.0"
structopt = { version = "0.3.16", optional = true }
poem-openapi = { version = "1.2.36", features = ["swagger-ui", "url"], optional = true }
fbs = "0.6"

[build-dependencies]
fbs-build = "0.1"

[dev-dependencies]
serde_json = "*"
toml = "*"
