[package]
name = "pahkat-types"
version = "2.3.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
semver = { version = "1.0.14", features = ["serde"] }
thiserror = "1.0.37"
typed-builder = "0.10.0"
structopt = { version = "0.3.26", optional = true }
poem-openapi = { version = "2.0.16", features = ["swagger-ui", "url"], optional = true }
fbs = "0.6.0"
async-graphql = { version = "4.0.15", optional = true, features = ["url"] }

[dev-dependencies]
serde_json = "1.0.86"
toml = "0.5.9"

[build-dependencies]
anyhow = "1.0.65"
fbs-build = "0.1.0"
fbs = "0.6.0"
