[package]
name = "pahkat-uploader"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2", features = ["net", "macros", "time"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3.14"
pahkat-types = { path = "../pahkat-types", features = ["structopt"] }
toml = "0.5.6"
anyhow = "1.0.31"
