[package]
name = "pahkat-uploader"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["net", "macros", "time"] }
serde = { version = "1.0.110", features = ["derive"] }
structopt = "0.3.14"
pahkat-types = { path = "../pahkat-types", features = ["structopt"] }
toml = "0.5.6"
anyhow = "1.0.31"

