[package]
name = "pahkat-uploader"
version = "2.1.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "net", "macros", "time"] }
serde = { version = "1.0.145", features = ["derive"] }
structopt = "0.3.26"
pahkat-types = { path = "../pahkat-types", features = ["structopt"] }
toml = "0.5.9"
anyhow = "1.0.65"

